--- a/Style.css
+++ b/Style.css
@@ -6,39 +6,53 @@
 	
 }
 
+hr{
+	
+    color: #e5e5e5;
+	border: none; 
+    background-color: #e5e5e5; 
+    height: 1px;
+	margin-top: 20px;  
+	
+}
+
 .HeaderUp{
   height: 50px;
   display: flex;
   justify-content: space-between;
-  margin-left: 50px; 
+  margin-left: 30px; 
 	
 }
 
 .HeaderRight {
-  margin-right: 50px;
+  margin-right: 60px;
 }
 
 .ButtonMenu {
+	color: rgba(3, 170, 110, 5);
   margin-left: 50px;
   display: flex;;
   justify-content: flex-start;
   height: 48px;
+	
 }
 
 
 .Sign {
-	color: rgba(2, 184, 117, 1);
+	color: rgba(3, 170, 110, 5);
 	display:flex;
-	padding-left: 1000px;
+	padding-left: 120px;
 	text-decoration: none;
 	margin: 0px;
+	
+	
 	
 }
 .Get {
 	
-	margin-top:-6px; 
-	margin-left:20px;
-	color: rgba(2, 184, 117, 1);
+	margin-top:10px; 
+	margin-left:200px;
+	color: rgba(3, 170, 110, 5);
 	display:flex;
 	text-decoration: none;
 	border: 1px solid rgba(2, 184, 117, 1);
@@ -48,6 +62,8 @@
 }
 .Sign:hover{
 	color: rgba(11, 59, 40, 1);
+
+
 }
 .Get:hover{
 	color:rgba(11, 59, 40, 1);
@@ -73,17 +89,17 @@ nav{
 }
 .Button > a{
 	text-decoration: none;
-	color: #757575;
+	color: grey;
 	font-size:13px;
 	letter-spacing: 0.6px;
 	opacity: inherit;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
 }
  .Button>a:hover {
-    color: black;
+    color: grey;
 	 
 }
-.Background1{
+.Fon{
 	background-image: url("https://miro.medium.com/max/1725/0*80VASNy08xZqd3-5.png");
 	background-size:100%;
 	margin-bottom: 20px;
