--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,10 @@
 .Header{
+
 	height: 120px;
   background: #FFFFFF;
   width: 100%;
-  position: fixed;
-	
+
+ 
 }
 
 hr{
@@ -16,8 +17,30 @@ hr{
 	
 }
 
+.MainBody{
+  margin-top: 10px;
+  height: 100%;
+  width: 100%;\
+  display: flex;
+  flex-direction: column-reverse;
+ justify-content: center;
+  align-items: center; 
+ 
+
+}
+
+body{
+    min-width: 700px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    height: 100%
+   
+   
+}
+
 .HeaderUp{
-  height: 50px;
+  height: 40px;
   display: flex;
   justify-content: space-between;
   margin-left: 30px; 
@@ -25,11 +48,10 @@ hr{
 }
 
 .HeaderRight {
-  margin-right: 60px;
+  margin-right: 10px;
 }
 
 .ButtonMenu {
-	color: rgba(3, 170, 110, 5);
   margin-left: 50px;
   display: flex;;
   justify-content: flex-start;
@@ -43,15 +65,15 @@ hr{
 	display:flex;
 	padding-left: 120px;
 	text-decoration: none;
-	margin: 0px;
+	margin: 20px;
 	
 	
 	
 }
 .Get {
 	
-	margin-top:10px; 
-	margin-left:200px;
+	margin-top: -45px; 
+	margin-left:220px;
 	color: rgba(3, 170, 110, 5);
 	display:flex;
 	text-decoration: none;
@@ -74,7 +96,7 @@ hr{
 
 nav{
 	display: flex;
-	padding:5px;
+	padding:1px;
 	margin-left:30px;
 }
 .Button{
@@ -87,40 +109,52 @@ nav{
 	margin-right: 30px;
 	
 }
-.Button > a{
-	text-decoration: none;
-	color: grey;
-	font-size:13px;
-	letter-spacing: 0.6px;
-	opacity: inherit;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
+
+
+.Button {
+  margin-top: 18px;
+  margin-left: 14px;
+  height: 48px;
+  font-family: sans-serif;
+  font-size: 12px;
+  color: #A9A9A9;
+  text-decoration: none;
 }
- .Button>a:hover {
-    color: grey;
-	 
+.Button:visited{
+  color: #A9A9A9;
 }
+.Button:focus, .GreyLink:hover {
+  color: grey;
+}
+
+
+
 .Fon{
 	background-image: url("https://miro.medium.com/max/1725/0*80VASNy08xZqd3-5.png");
 	background-size:100%;
-	margin-bottom: 20px;
+	margin-bottom: 0px;
+	margin-left: 0px;
 	width: 100%;
-	height: 600px;
+	height: 450px;
+
 }
 	
 .TitleHeader{
 	color: rgba(0, 0, 0, 0.84);
-	font-weight: 400;
-	line-height: 48px;
+	font-weight: 400px;
+	line-height: 40px;
  	font-size: 40px;
 	margin-left:28%;
-	weight: 44%;
+	width: 100%;
 	margin-bottom: 2%;
+	margin-top: 40px;
 }
 
-.TitleUrls1{
+.TitleUrls{
 	padding-left: 32.5%;
-	weight: 44%;
-	margin-top:-2.7%;
+	width: 44%;
+	margin-top: -40px;
+	margin-left: 40px;
 	text-decoration: none;
 	color:inherit;
 }
@@ -131,26 +165,42 @@ nav{
 
 .TitleLinks{
 	padding-left: 28%;
-	weight: 44%;
+	width: 44%;
+	margin-top: -20px;
 	
 }
 
-.Url1>a,.Url2>a,.Link1>a{
-	color:inherit;
-	text-decoration: none;
-}
 
+
+.Url1{
+	
+	 font-family: Arial, Helvetica, Verdana, sans-serif; 
+    font-size: 90%; 
+    font-weight:lighter; 
+    color: #363535;
+    text-decoration: none;
+}
 
 .Url2{
-	
+	 font-family: Arial, Helvetica, Verdana, sans-serif; 
+    font-size: 90%; 
+    font-weight:lighter; 
+    color: #363535;
 	border: 0.5px solid #4F4F4F;
  	padding: 2px; 
 	border-radius: 4px;
+	text-decoration: none;
+}
+
+.Link1{
+	
+	margin-left: 10px;
+
 }
 
 .Follow{
-	margin-top: -2%;
-	padding-left: 64%;
+	margin-top: -25;
+	padding-left: 70%;
 	margin-bottom: 3%;
 }
 
@@ -159,7 +209,8 @@ nav{
 }
 
 .Url1:hover{
-	 text-decoration: underline;
+	
+    text-decoration: underline;
 }
 .Url2:hover{
 	
@@ -169,17 +220,30 @@ nav{
 }
 .Link1:hover{
 	 text-decoration: underline;
+	 flex-direction: row;
 }
 
 
 .Text{
-	padding-left: 28%;
-	padding-right: 28%;
-	font-size: 22px;
-	color:inherit;
+width: 100%;
+flex-direction: row;
+margin-top: 500px;
+	overflow: auto;
+    
 }
 .Link2{
 	text-decoration: none; 
 	border-bottom: 0.5px solid black;
 	color:inherit;
+}
+
+.Main{
+	  
+	padding-left: 28%;
+	padding-right: 28%;
+	width: 640px;
+	color: #393636;
+   margin-top: 40px;
+    font-size: 130%; 
+    font-weight:lighter; 
 }
